--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "serve": "php artisan serve",
+        "start": "concurrently \"npm run dev\" \"npm run serve\""
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
